--- a/ruby_lessons/web_guesser/views/index.erb
+++ b/ruby_lessons/web_guesser/views/index.erb
@@ -1,1 +1,18 @@
-"The SECRET NUMBER is #{random_number}."
+<!doctype html>
+<html>
+    <head>
+    	<title>WebGuesser</title>
+
+<!--         <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="author" href="humans.txt"> -->
+    </head>
+    <body>
+    	<p>The SECRET NUMBER is <%= random_number %>.</p>
+        
+         <!--<script src="js/main.js"></script> -->
+    </body>
+</html>
+
