number guesser game complete
—implemented “too high”, “too low”, “WAY too high”. “WAY too low”
messages
—user only has 5 chances to guess
—used set/settings for secret_number and times_guessed

--- a/ruby_lessons/web_guesser/views/index.erb
+++ b/ruby_lessons/web_guesser/views/index.erb
@@ -10,7 +10,14 @@
         <link rel="author" href="humans.txt"> -->
     </head>
     <body>
-    	<p>The SECRET NUMBER is <%= random_number %>.</p>
+        
+    	<form>
+		  <input type='text' name='guess' />
+		  <input type='submit' value='Guess!' />
+		</form>
+    	<p><%= message %></p>
+
+
         
          <!--<script src="js/main.js"></script> -->
     </body>
