--- a/ruby_lessons/idea_box/views/index.erb
+++ b/ruby_lessons/idea_box/views/index.erb
@@ -3,6 +3,11 @@
     <title>IdeaBox</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>IdeaBox!</h1>
+    <form action='/' method='POST'>
+      <p>Your Idea: <input type='text' name='idea_title'/></p>
+      <textarea name='idea_description'></textarea><br/><br/>
+      <input type='submit'/>
+    </form>
   </body>
 </html>
