--- a/ruby_lessons/idea_box/views/index.erb
+++ b/ruby_lessons/idea_box/views/index.erb
@@ -5,11 +5,7 @@
 	</head>
 	<body>
 		<h1>IdeaBox!</h1>
-		<form action='/' method='POST'>
-  			<p>Your Idea:  <input type='text' name='idea[title]'/></p>
-  			<textarea name='idea[description]'></textarea><br/><br/>
- 			 <input type='submit'/>
-		</form>
+		<%= erb :form, locals: {idea: idea, mode: "new"} %>
 		<h3>Existing Ideas</h3>
 		<ul>
 			<% ideas.each_with_index do |idea, id| %>
